model & create BD

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,6 +43,7 @@ file.reference.javafx.graphics.jar=C:\\Program Files\\Java\\javafx-sdk-17.0.13\\
 file.reference.javafx.media.jar=C:\\Program Files\\Java\\javafx-sdk-17.0.13\\lib\\javafx.media.jar
 file.reference.javafx.swing.jar=C:\\Program Files\\Java\\javafx-sdk-17.0.13\\lib\\javafx.swing.jar
 file.reference.javafx.web.jar=C:\\Program Files\\Java\\javafx-sdk-17.0.13\\lib\\javafx.web.jar
+file.reference.mysql-connector-j-9.0.0.jar=C:\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -53,7 +54,8 @@ javac.classpath=\
     ${file.reference.javafx.graphics.jar}:\
     ${file.reference.javafx.media.jar}:\
     ${file.reference.javafx.swing.jar}:\
-    ${file.reference.javafx.web.jar}
+    ${file.reference.javafx.web.jar}:\
+    ${file.reference.mysql-connector-j-9.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -66,7 +68,8 @@ javac.modulepath=\
     ${file.reference.javafx.graphics.jar}:\
     ${file.reference.javafx.media.jar}:\
     ${file.reference.javafx.swing.jar}:\
-    ${file.reference.javafx.web.jar}
+    ${file.reference.javafx.web.jar}:\
+    ${file.reference.mysql-connector-j-9.0.0.jar}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
