--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,6 +43,7 @@ file.reference.javafx.graphics.jar=C:\\Program Files\\Java\\javafx-sdk-21.0.5\\l
 file.reference.javafx.media.jar=C:\\Program Files\\Java\\javafx-sdk-21.0.5\\lib\\javafx.media.jar
 file.reference.javafx.swing.jar=C:\\Program Files\\Java\\javafx-sdk-21.0.5\\lib\\javafx.swing.jar
 file.reference.javafx.web.jar=C:\\Program Files\\Java\\javafx-sdk-21.0.5\\lib\\javafx.web.jar
+file.reference.jfoenix-8.0.8.jar=C:\\Program Files\\Java\\jfoenix-8.0.8.jar
 file.reference.mysql-connector-j-9.0.0.jar=D:\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0.jar
 includes=**
 jar.compress=false
@@ -54,7 +55,8 @@ javac.classpath=\
     ${file.reference.javafx.graphics.jar}:\
     ${file.reference.javafx.media.jar}:\
     ${file.reference.javafx.swing.jar}:\
-    ${file.reference.javafx.web.jar}
+    ${file.reference.javafx.web.jar}:\
+    ${file.reference.jfoenix-8.0.8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
