--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,23 +35,22 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/GestionRessourcesDurables
 endorsed.classpath=
 excludes=
-file.reference.charm-glisten-6.0.2.jar=C:\\Users\\HP\\Downloads\\charm-glisten-6.0.2.jar
-file.reference.fontawesomefx-commons-9.1.2.jar=C:\\Program Files\\Java\\fontawesomefx-commons-9.1.2.jar
-file.reference.fontawesomefx-fontawesome-4.7.0-9.1.2.jar=C:\\Program Files\\Java\\fontawesomefx-fontawesome-4.7.0-9.1.2.jar
-file.reference.javafx-swt.jar=C:\\Program Files\\Java\\javafx-sdk-17.0.13\\lib\\javafx-swt.jar
-file.reference.javafx.base.jar=C:\\Program Files\\Java\\javafx-sdk-17.0.13\\lib\\javafx.base.jar
-file.reference.javafx.controls.jar=C:\\Program Files\\Java\\javafx-sdk-17.0.13\\lib\\javafx.controls.jar
-file.reference.javafx.fxml.jar=C:\\Program Files\\Java\\javafx-sdk-17.0.13\\lib\\javafx.fxml.jar
-file.reference.javafx.graphics.jar=C:\\Program Files\\Java\\javafx-sdk-17.0.13\\lib\\javafx.graphics.jar
-file.reference.javafx.media.jar=C:\\Program Files\\Java\\javafx-sdk-17.0.13\\lib\\javafx.media.jar
-file.reference.javafx.swing.jar=C:\\Program Files\\Java\\javafx-sdk-17.0.13\\lib\\javafx.swing.jar
-file.reference.javafx.web.jar=C:\\Program Files\\Java\\javafx-sdk-17.0.13\\lib\\javafx.web.jar
-file.reference.jfoenix-9.0.10.jar=C:\\Users\\HP\\Downloads\\jfoenix-9.0.10.jar
-file.reference.mysql-connector-j-9.0.0.jar=C:\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0.jar
+file.reference.charm-glisten-6.0.2.jar=charm-glisten-6.0.2.jar
+file.reference.fontawesomefx-commons-9.1.2.jar=fontawesomefx-commons-9.1.2.jar
+file.reference.fontawesomefx-fontawesome-4.7.0-9.1.2.jar=fontawesomefx-fontawesome-4.7.0-9.1.2.jar
+file.reference.javafx-swt.jar=C:\\Program Files\\Java\\javafx-sdk-21.0.5\\lib\\javafx-swt.jar
+file.reference.javafx.base.jar=C:\\Program Files\\Java\\javafx-sdk-21.0.5\\lib\\javafx.base.jar
+file.reference.javafx.controls.jar=C:\\Program Files\\Java\\javafx-sdk-21.0.5\\lib\\javafx.controls.jar
+file.reference.javafx.fxml.jar=C:\\Program Files\\Java\\javafx-sdk-21.0.5\\lib\\javafx.fxml.jar
+file.reference.javafx.graphics.jar=C:\\Program Files\\Java\\javafx-sdk-21.0.5\\lib\\javafx.graphics.jar
+file.reference.javafx.media.jar=C:\\Program Files\\Java\\javafx-sdk-21.0.5\\lib\\javafx.media.jar
+file.reference.javafx.swing.jar=C:\\Program Files\\Java\\javafx-sdk-21.0.5\\lib\\javafx.swing.jar
+file.reference.javafx.web.jar=C:\\Program Files\\Java\\javafx-sdk-21.0.5\\lib\\javafx.web.jar
+file.reference.jfoenix-9.0.9.jar=C:\\Program Files\\Java\\jfoenix-9.0.9.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-9.0.0.jar}:\
+    ${file.reference.jfoenix-9.0.9.jar}:\
     ${file.reference.javafx-swt.jar}:\
     ${file.reference.javafx.base.jar}:\
     ${file.reference.javafx.controls.jar}:\
@@ -60,28 +59,26 @@ javac.classpath=\
     ${file.reference.javafx.media.jar}:\
     ${file.reference.javafx.swing.jar}:\
     ${file.reference.javafx.web.jar}:\
-    ${file.reference.jfoenix-9.0.10.jar}:\
+    ${file.reference.charm-glisten-6.0.2.jar}:\
     ${file.reference.fontawesomefx-commons-9.1.2.jar}:\
-    ${file.reference.fontawesomefx-fontawesome-4.7.0-9.1.2.jar}:\
-    ${file.reference.charm-glisten-6.0.2.jar}
+    ${file.reference.fontawesomefx-fontawesome-4.7.0-9.1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=\
-    ${file.reference.javafx-swt.jar}:\
-    ${file.reference.javafx.base.jar}:\
+    ${file.reference.charm-glisten-6.0.2.jar}:\
     ${file.reference.fontawesomefx-commons-9.1.2.jar}:\
     ${file.reference.fontawesomefx-fontawesome-4.7.0-9.1.2.jar}:\
-    ${file.reference.jfoenix-9.0.10.jar}:\
+    ${file.reference.javafx-swt.jar}:\
+    ${file.reference.javafx.base.jar}:\
     ${file.reference.javafx.controls.jar}:\
     ${file.reference.javafx.fxml.jar}:\
     ${file.reference.javafx.graphics.jar}:\
     ${file.reference.javafx.media.jar}:\
     ${file.reference.javafx.swing.jar}:\
     ${file.reference.javafx.web.jar}:\
-    ${file.reference.mysql-connector-j-9.0.0.jar}:\
-    ${file.reference.charm-glisten-6.0.2.jar}
+    ${file.reference.jfoenix-9.0.9.jar}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
