--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -60,6 +60,7 @@ file.reference.javafx.web.jar-1=C:\\Program Files\\Java\\javafx-sdk-17.0.13\\lib
 file.reference.jfoenix-9.0.10.jar=C:\\Users\\HP\\Downloads\\jfoenix-9.0.10.jar
 file.reference.jfoenix-9.0.9.jar=C:\\Program Files\\Java\\jfoenix-9.0.9.jar
 file.reference.mysql-connector-j-9.0.0.jar=C:\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0.jar
+file.reference.mysql-connector-j-9.0.0.jar-1=E:\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -87,7 +88,8 @@ javac.classpath=\
     ${file.reference.javafx.swing.jar-1}:\
     ${file.reference.javafx.web.jar-1}:\
     ${file.reference.charm-glisten-6.0.2.jar-1}:\
-    ${file.reference.jfoenix-9.0.10.jar}
+    ${file.reference.jfoenix-9.0.10.jar}:\
+    ${file.reference.mysql-connector-j-9.0.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -124,7 +126,9 @@ javac.source=17
 javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_5.classpath}:\
+    ${libs.testng.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
